cmake_minimum_required(VERSION 3.27.2)
project(Bindu)

set(CMAKE_CXX_STANDARD 17)


add_library(Bindu STATIC
        ErrorHandler/EngineException.h
        ErrorHandler/EngineException.cpp
        Event/EventManager.cpp
        Event/EventManager.h
        Event/EventStruct.cpp
        Event/EventStruct.h
        Event/EventPool.cpp
        Event/EventPool.h
        Event/IEventListener.h
        Window/IWindow.h
        Window/Win32Window.cpp
        Window/Win32Window.h
        Core/Engine/IEngine.h
        Core/Engine/Win32Engine.cpp
        Core/Engine/Win32Engine.h
        Core/App/IBindu_App.h
        Utility/Common/CommonUtility.h
        Logger/ILogger.h
        Logger/ErrorLogManager.cpp
        Logger/ErrorLogManager.h
        Logger/Logger.h
        Logger/Logger.cpp
        Input/InputManager.cpp
        Input/InputManager.h
        Input/KeysAndButtons.h
        Input/IInputHandler.h
        Input/Win32InputHandler.cpp
        Input/Win32InputHandler.h
        Input/Keyboard.cpp
        Input/Keyboard.h
        Input/Mouse.h
        Input/Mouse.cpp
        Utility/Common/Timer.h
        Utility/Common/Timer.cpp 
        Gui/Common/imconfig.h
        Gui/Common/imgui.h
        Gui/Common/imgui.cpp
        Gui/Common/imgui_internal.h
        Gui/Common/imstb_rectpack.h
        Gui/Common/imstb_textedit.h
        Gui/Common/imstb_truetype.h
        Gui/Common/imgui_demo.cpp
        Gui/Common/imgui_draw.cpp
        Gui/Common/imgui_tables.cpp
        Gui/Common/imgui_widgets.cpp
        Gui/IGui.h
        Gui/DX12/imgui_impl_win32.h
        Gui/DX12/imgui_impl_win32.cpp
        Gui/DX12/imgui_impl_dx12.h
        Gui/DX12/imgui_impl_dx12.cpp
        Utility/Common/CircleBuffer.h 
        Core/Renderer/DirectX/D3DDeviceManager.h
        Core/Renderer/DirectX/D3DDeviceManager.cpp
        Core/Renderer/DirectX/D3DSwapChain.h
        Core/Renderer/DirectX/D3DSwapChain.cpp
        Core/Renderer/DirectX/RenderTexture.h 
        Core/Renderer/DirectX/RenderTexture.cpp
        Core/Renderer/DirectX/D3DUtillity.h
        Core/Renderer/DirectX/ComException.h
        Core/Renderer/DirectX/d3dx12.h
        Core/Renderer/DirectX/CpuDescriptorHeap.h
        Core/Renderer/DirectX/CpuDescriptorHeap.cpp
        Core/Renderer/DirectX/DescriptorHeap.h
        Core/Renderer/DirectX/DescriptorHeap.cpp
        Core/Renderer/DirectX/DescriptorHeapManager.h
        Core/Renderer/DirectX/DescriptorHeapManager.cpp
        Core/Renderer/DirectX/GpuDescriptorHeap.h 
        Core/Renderer/DirectX/GpuDescriptorHeap.cpp
        Core/Renderer/DirectX/VariableSizeGpuMemoryAllocator.h
        Core/Renderer/DirectX/VariableSizeGpuMemoryAllocator.cpp
        Core/Renderer/DirectX/VariableSizeMemoryAllocator.h
        Core/Renderer/DirectX/VariableSizeMemoryAllocator.cpp
        Core/Renderer/DirectX/D3DCommandContext.h 
        Core/Renderer/DirectX/D3DCommandContext.cpp
        Core/Renderer/DirectX/D3DFence.h
        Core/Renderer/DirectX/D3DFence.cpp
        Core/Renderer/DirectX/IDescriptorHeapAllocator.h
        Core/Renderer/DirectX/D3DPipelineStateManager.h
        Core/Renderer/DirectX/D3DPipelineStateManager.cpp
        Core/Renderer/DirectX/D3DShader.h
        Core/Renderer/DirectX/D3DShader.cpp
        Core/Renderer/DirectX/DefaultRenderContext.h
        Core/Renderer/DirectX/DefaultRenderContext.cpp
        Core/GameObject/Transform.h
        Core/GameObject/Transform.cpp
        Core/GameObject/GameObject.h
        Core/GameObject/GameObject.cpp
        Core/GameObject/MeshObject.h
        Core/GameObject/MeshObject.cpp
        Core/GameObject/Buffers.h
        Core/GameObject/Buffers.cpp
        Core/Renderer/DirectX/UploadBuffer.h
        Core/GameObject/Camera.h
        Core/GameObject/Camera.cpp 
        Core/Renderer/DirectX/FlyFrame.h
        Core/Renderer/DirectX/FlyFrame.cpp 
        Core/Renderer/DirectX/D3DConstantBuffer.h
        Core/Renderer/DirectX/D3DConstantBuffer.cpp
        Core/GameObject/MeshManager.h
        Core/GameObject/MeshManager.cpp
        Core/GameObject/GeometryGenerator.h
        Core/GameObject/GeometryGenerator.cpp
        Core/GameObject/Material.h
        Core/GameObject/Material.cpp
        MathHelper/MathHelper.h
        MathHelper/MathHelper.cpp
        Core/GameObject/Light.h
        Core/GameObject/Light.cpp "Core/Scene/Scene.h" "Core/Managers/GameObjectManager.h" "Core/Managers/ConstantBufferManager.h" "Core/Managers/ConstantBufferManager.cpp" "Core/Managers/GameObjectManager.cpp" "Core/Scene/Scene.cpp" "Core/GameObject/LightData.h"   "Core/Renderer/DirectX/DDSTextureLoader.cpp" "Core/Renderer/DirectX/DDSTextureLoader.h" "Core/Resources/Texture.h" "Core/Resources/Texture.cpp" "Core/Managers/TextureManager.h" "Core/Managers/TextureManager.cpp" "Core/Managers/MaterialManager.h" "Core/Managers/MaterialManager.cpp" "Core/Managers/CbAllocation.h" "Core/Scene/RenderLayer.h" "Core/Scene/RenderLayer.cpp" "Core/Managers/ShaderManager.h")


